--- a/src/variables.scss
+++ b/src/variables.scss
@@ -4,6 +4,6 @@
 @tailwind utilities;
 
 /******** GENERAL VARIABLES ********/
-$primary-blu: #0182F9;
-$secondary-black: #1C1C1C;
-$tertiary-grey: #303030;
+$primary-black: #141414;
+// $secondary-black: #1C1C1C;
+// $tertiary-grey: #303030;
